--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,11 +9,11 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/sahitisn
       - icon: twitter
         href: https://twitter.com
       - icon: linkedin
-        href: https://linkedin.com
+        href: https://linkedin.com/in/sahitisn
 
 format:
   html:
