--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,9 +2,10 @@ project:
   type: website
 
 website:
-  title: "Sahiti's musings"
+  title: "Sahiti's Musings"
   site-url: https://sahiti.nallamudi.com
-  description: Sahiti's book reviews 
+  description: Sahiti's book reviews
+  image: sahiti.jpg
   navbar:
     right:
       - about.qmd
